--- a/index.html
+++ b/index.html
@@ -347,9 +347,7 @@
         <div class="container mx-auto px-6 text-center">
             <h3 class="text-white font-bold text-xl tracking-widest mb-4">MUKAI SUISAN</h3>
             <p class="text-sm mb-2">株式会社ムカイ水産</p>
-            <p class="text-sm mb-8">〒730-0000 広島県広島市中区江波1-1-1 ムカイビル</p>
-            <div class="text-[10px] text-slate-500 mb-4">
-                寄付金の用途：広島市の「平和の推進」「文化の振興」「環境保全」などに活用されます。
+            <p class="text-sm mb-8">〒730-0000 広島県広島市中区江波南1-20-12</p>
             </div>
             <p class="text-xs opacity-50">&copy; Mukai Suisan Co., Ltd. All Rights Reserved.</p>
         </div>
